# alice

./: .gitignore  README.md  pyproject.toml
alice/: train.py  train_probes.py  utils.py
alice/models/: modules.py  probes.py  transformer.py
configs/: alice_base.yaml  alice_bijective.yaml  alice_dynamic.yaml  alice_multilingual.yaml  probe_base_linear.yaml
configs/generalization/: cryptogram_gen_10.yaml  cryptogram_gen_100.yaml  cryptogram_gen_1000.yaml  cryptogram_gen_10000.yaml  cryptogram_gen_250.yaml  cryptogram_gen_2500.yaml  cryptogram_gen_500.yaml  cryptogram_gen_750.yaml
configs/scaling/: cryptogram_0.5m.yaml  cryptogram_11m.yaml  cryptogram_27m.yaml  cryptogram_308m.yaml  cryptogram_3m.yaml
examples/: early_exit.py
